[package]
name = "rup"
version = "0.1.0"
description = "A CLI tool for easy file transfers"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.2.1", features = ["derive"] }
camino = "1.1.9"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4.40"
walkdir = "2"
tabwriter = "1.2.1"
humansize = "2.1.0"
libc = "0.2.171"
