[package]
name = "lud"
version = "0.1.0"
authors = ["ciathefed"]
description = "A CLI tool for easy file transfers"
license = "MIT"
repository = "https://github.com/ciathefed/lud"
readme = "README.md"
keywords = ["cli", "file", "transfer", "server", "networking"]
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
log = "0.4.27"
simplelog = "0.11"
clap = { version = "4.2.1", features = ["derive"] }
camino = "1.1.9"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4.40"
walkdir = "2"
tabwriter = "1.2.1"
humansize = "2.1.0"
atty = "0.2"
config = "0.15.11"
dirs = "6.0.0"
tui = { version = "0.16", features = ["crossterm"] }
crossterm = "0.25"
